--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "route-garage": {
+    "routa-garage": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -24,7 +24,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/route-garage",
+            "outputPath": "dist/routa-garage",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -73,10 +73,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "route-garage:build:production"
+              "buildTarget": "routa-garage:build:production"
             },
             "development": {
-              "buildTarget": "route-garage:build:development"
+              "buildTarget": "routa-garage:build:development"
             }
           },
           "defaultConfiguration": "development"
