--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "route-garage",
+  "name": "routa-garage",
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
@@ -24,6 +24,8 @@
     "bootstrap-icons": "^1.13.1",
     "lucide-angular": "^0.548.0",
     "ngx-pagination": "^6.0.3",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
