--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.0",
+    "@angular/cdk": "^18.2.14",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
     "@angular/forms": "^18.2.0",
+    "@angular/material": "^18.2.14",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@popperjs/core": "^2.11.8",
+    "apexcharts": "^3.54.1",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.3.0",
     "lucide-angular": "^0.548.0",
+    "ng-apexcharts": "^1.12.0",
     "ngx-pagination": "^6.0.3",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.0",
